--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/greyGlogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Greyline Solutions</title>
+    <title>AOD Interactive</title>
+    <meta name="description"
+      content="Empowering brands through technology, design, and digital craftsmanship." />
   </head>
   <body>
     <div id="root"></div>
